VFS-5420 Rework alias into username
* Rework 'name' field (in user record) to 'fullName' for disambiguation
* Leave alias in GS/REST APIs for backward compatiblity
* Adjust auth.config and implement upgrader
* Rename onepanelAuth to basicAuth in auth.config and account in upgrader

--- a/rel/files/auth.config
+++ b/rel/files/auth.config
@@ -1,11 +1,11 @@
-%% Default auth.config file, only onepanelAuth login is enabled. Please refer
+%% Default auth.config file, only basicAuth login is enabled. Please refer
 %% to ./template.auth.config or Onedata documentation (https://onedata.org)
 %% for information how to fill out this config.
 
 #{
-    version => 2,
+    version => 3,
 
-    onepanelAuthConfig => #{
+    basicAuthConfig => #{
         enabled => true
     },
 
@@ -18,11 +18,11 @@
     },
 
     supportedIdps => [
-        {onepanel, #{
-            displayName => "Onepanel account",
-            iconPath => "/assets/images/auth-providers/onepanel.svg",
+        {basicAuth, #{
+            displayName => "username & password",
+            iconPath => "/assets/images/auth-providers/basicauth.svg",
             iconBackgroundColor => "#4BD187",
-            protocol => onepanelAuth
+            protocol => basicAuth
         }}
     ]
 }.
