--- a/rel/files/template.auth.config
+++ b/rel/files/template.auth.config
@@ -9,10 +9,10 @@
 %% https://onedata.org/#/home/documentation/doc/administering_onedata/openid_saml_configuration.html
 
 #{
-    version => 2,
+    version => 3,
 
-    % Allows to log in to Onezone using the account from Onepanel (user & password).
-    onepanelAuthConfig => #{
+    % Allows to log in to Onezone using username & password.
+    basicAuthConfig => #{
         enabled => true
     },
 
@@ -75,8 +75,8 @@
             % OpenID attributes.
             attributeMapping => #{
                 subjectId => {required, "sub"},
-                alias => {optional, "login"},
-                name => {required, {any, ["name", "login"]}},
+                displayName => {required, {any, ["name", "fullName"]}},
+                username => {optional, "username"},
                 emails => {optional, "email"},
                 entitlements => {optional, "groups"},
                 custom => {optional, "name"}
@@ -120,8 +120,8 @@
             % http_redirect (default) or http_post
             attributeMapping => #{
                 subjectId => {required, "eduPersonTargetedID"},
-                alias => {optional, "eduPersonPrincipalName"},
-                name => {required, {any, ["displayName", "surName"]}},
+                displayName => {required, {any, ["displayName", "surName"]}},
+                username => {optional, "eduPersonPrincipalName"},
                 emails => {optional, "mail"},
                 entitlements => {optional, "eduPersonEntitlement"},
                 custom => {optional, "eduPersonScopedAffiliation"}
@@ -154,27 +154,27 @@
 
     supportedIdps => [
 
-        % onepanel is a special IdP id reserved for onepanel login (onepanelAuth),
-        % there can be only one entry using this protocol.
-        {onepanel, #{
+        % basicAuth is a special IdP id reserved for signing in with
+        % username & password (basicAuth), there can be only one entry using this protocol.
+        {basicAuth, #{
             % Configuration of the login page button
-            displayName => "Onepanel account",
+            displayName => "username & password",
             % Some predefined icons are built-in into the GUI app.
             % Their paths start with /assets/images/auth-providers.
             % For a custom icon, put it in:
             %   /var/www/html/custom/oz_worker/<path>   - for versions 18.02.*
             %   /var/www/html/oz_worker/custom/<path>   - for versions 19.02.* or higher
             % And reference it here like this: /custom/<path>
-            iconPath => "/assets/images/auth-providers/onepanel.svg",
+            iconPath => "/assets/images/auth-providers/basicauth.svg",
             % Background color is useful for icons with transparency. Moreover,
             % after selecting an IdP, its icon disappears and a spinner is
             % shown - hence background color should be kept the same as icon's
             % background color (if any).
             iconBackgroundColor => "#4BD187",
 
-            % Which protocol is used for this IdP - onepanelAuth is the only
-            % valid one for onepanel IdP.
-            protocol => onepanelAuth
+            % Which protocol is used for this IdP - basicAuth is the only
+            % valid one for basicAuth IdP.
+            protocol => basicAuth
         }},
 
         {google, #{
@@ -258,8 +258,8 @@
                 % OpenID attributes.
                 attributeMapping => #{
                     subjectId => {required, "sub"},
-                    name => {required, {any, ["name", "login"]}},
-                    alias => {optional, "login"},
+                    displayName => {required, {any, ["name", "fullName"]}},
+                    username => {optional, "username"},
                     emails => {optional, "email"},
                     entitlements => {optional, "given_name"},
                     custom => {optional, "given_name"}
@@ -311,8 +311,8 @@
                 % SAML attributes.
                 attributeMapping => #{
                     subjectId => {required, "eduPersonUniqueId"},
-                    alias => {optional, "eduPersonPrincipalName"},
-                    name => {required, "displayName"},
+                    displayName => {required, "displayName"},
+                    username => {optional, "eduPersonPrincipalName"},
                     emails => {optional, "mail"},
                     entitlements => {optional, "eduPersonEntitlement"},
                     custom => {optional, "eduPersonScopedAffiliation"}
