VFS-5420 Improvements according to PR

--- a/rel/files/template.auth.config
+++ b/rel/files/template.auth.config
@@ -154,8 +154,8 @@
 
     supportedIdps => [
 
-        % basicAuth is a special IdP id reserved for signing in with
-        % username & password (basicAuth), there can be only one entry using this protocol.
+        % basicAuth is a special IdP id reserved for signing in with username & password
+        % and the only valid config entry using the basicAuth protocol.
         {basicAuth, #{
             % Configuration of the login page button
             displayName => "username & password",
@@ -258,7 +258,7 @@
                 % OpenID attributes.
                 attributeMapping => #{
                     subjectId => {required, "sub"},
-                    displayName => {required, {any, ["name", "fullName"]}},
+                    fullName => {required, {any, ["name", "fullName"]}},
                     username => {optional, "username"},
                     emails => {optional, "email"},
                     entitlements => {optional, "given_name"},
@@ -311,7 +311,7 @@
                 % SAML attributes.
                 attributeMapping => #{
                     subjectId => {required, "eduPersonUniqueId"},
-                    displayName => {required, "displayName"},
+                    fullName => {required, "displayName"},
                     username => {optional, "eduPersonPrincipalName"},
                     emails => {optional, "mail"},
                     entitlements => {optional, "eduPersonEntitlement"},
