--- a/dockers.config
+++ b/dockers.config
@@ -1,4 +1,4 @@
 {
-    "builder": "onedata/builder:v66",
-    "worker": "onedata/worker:v60"
+    "builder": "onedata/builder:1802-1",
+    "worker": "onedata/worker:1802-1"
 }
