VFS-5359 Enabled RPM Software Collection for packages

--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -2,6 +2,8 @@
 %% Packaging
 %%
 {build_envs, "REBAR_PROFILE=package"}.
+{scl_prefix, "/opt/onedata"}.
+{scl_package, "oz-worker"}.
 {package_name, "oz-worker"}.
 {package_install_name, "oz_worker"}.
 {package_install_user, "oz_worker"}.
@@ -41,40 +43,43 @@
     "FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR\n"
     "OTHER DEALINGS IN THE SOFTWARE."}.
 {rpm_requires,
-    ", folly"
-    ", libcouchbase2-libevent"
-    ", openssl"}.
+    "Requires: %scl_require_package %{scl} folly\n"
+    "Requires: %scl_require_package %{scl} openssl\n"
+    "Requires: libcouchbase2-libevent\n"}.
 {rpm_build_requires,
-    ", automake"
-    ", bc"
-    ", binutils-devel"
-    ", boost-devel >= 1.58.0"
-    ", cmake >= 3.0.0"
-    ", double-conversion-devel"
-    ", double-conversion-static"
-    ", erlang-common_test >= 18.0"
-    ", erlang-edoc >= 18.0"
-    ", erlang-erl_interface >= 18.0"
-    ", erlang-eunit >= 18.0"
-    ", erlang-observer >= 18.0"
-    ", erlang-parsetools >= 18.0"
-    ", erlang-reltool >= 18.0"
-    ", erlang-xmerl >= 18.0"
-    ", erlang-os_mon >= 18.0"
-    ", folly-devel = 2017.10.02.00"
-    ", folly-static = 2017.10.02.00"
-    ", gcc-c++ >= 4.9.0"
-    ", git"
-    ", gflags-devel"
-    ", glog-devel >= 0.3.4"
-    ", golang"
-    ", libcouchbase-devel"
-    ", libsodium-devel"
-    ", libtool"
-    ", ninja-build"
-    ", openssl"
-    ", python"
-    ", wget"}.
+	"BuildRequires: %scl_require_package devtoolset-6 gcc-c++\n"
+    "BuildRequires: %scl_require_package %{scl} boost-devel >= 1.58.0\n"
+    "BuildRequires: %scl_require_package %{scl} folly-devel\n"
+    "BuildRequires: %scl_require_package %{scl} folly-static\n"
+    "BuildRequires: %scl_require_package %{scl} gflags-devel\n"
+    "BuildRequires: %scl_require_package %{scl} glog-devel\n"
+    "BuildRequires: %scl_require_package %{scl} openssl\n"
+    "BuildRequires: automake\n"
+    "BuildRequires: bc\n"
+    "BuildRequires: binutils-devel\n"
+    "BuildRequires: botan-devel >= 1.10.0\n"
+    "BuildRequires: cmake3\n"
+    "BuildRequires: double-conversion-devel\n"
+    "BuildRequires: double-conversion-static\n"
+    "BuildRequires: erlang-common_test >= 20.0\n"
+    "BuildRequires: erlang-edoc >= 20.0\n"
+    "BuildRequires: erlang-erl_interface >= 20.0\n"
+    "BuildRequires: erlang-eunit >= 20.0\n"
+    "BuildRequires: erlang-observer >= 20.0\n"
+    "BuildRequires: erlang-os_mon >= 20.0\n"
+    "BuildRequires: erlang-parsetools >= 20.0\n"
+    "BuildRequires: erlang-reltool >= 20.0\n"
+    "BuildRequires: erlang-xmerl >= 20.0\n"
+    "BuildRequires: git\n"
+    "BuildRequires: golang\n"
+    "BuildRequires: libcouchbase-devel\n"
+    "BuildRequires: libevent-devel\n"
+    "BuildRequires: libsodium-devel\n"
+    "BuildRequires: libtool\n"
+    "BuildRequires: make\n"
+    "BuildRequires: ninja-build\n"
+    "BuildRequires: python\n"
+    "BuildRequires: wget\n"}.
 {rpm_build,
     "export PATH=$PATH:$RPM_BUILD_DIR/node/bin"}.
 {deb_depends,
