VFS-5397 Introduce GUI package hash verification
* Rework GUI endpoints related to unified/emergency GUI - add gui-context endpoint
* Tidy up and refactor the code related to static GUI distribution
* Update ctool and gui refs, use the new gui-config.sh format
* Fix an error in graph sync test SUITE
* Make sure username is not occupied during migration of onepanel users

--- a/rel/files/template.auth.config
+++ b/rel/files/template.auth.config
@@ -75,7 +75,7 @@
             % OpenID attributes.
             attributeMapping => #{
                 subjectId => {required, "sub"},
-                displayName => {required, {any, ["name", "fullName"]}},
+                fullName => {required, {any, ["name", "fullName"]}},
                 username => {optional, "username"},
                 emails => {optional, "email"},
                 entitlements => {optional, "groups"},
@@ -120,7 +120,7 @@
             % http_redirect (default) or http_post
             attributeMapping => #{
                 subjectId => {required, "eduPersonTargetedID"},
-                displayName => {required, {any, ["displayName", "surName"]}},
+                fullName => {required, {any, ["displayName", "surName"]}},
                 username => {optional, "eduPersonPrincipalName"},
                 emails => {optional, "mail"},
                 entitlements => {optional, "eduPersonEntitlement"},
