--- a/rebar.config
+++ b/rebar.config
@@ -25,10 +25,11 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "./test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "47613950d4"}}},
-    {cluster_worker, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref,"dbb042b607"}}},
+    {onedata_documentation, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/onedata-documentation.git", {ref, "57b3d2c348"}}}},
+    {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "6834d6d48b"}}},
+    {cluster_worker, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref,"ddd96e5e06"}}},
     {cluster_manager, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-manager.git", {ref, "c8e29368c7"}}}},
-    {gui, {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {ref, "fed894c120"}}},
+    {gui, {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {ref, "c0ee799397"}}},
     {esaml, {git, "https://github.com/onedata/esaml.git", {ref, "2cd59b3620"}}},
     {erldns, {git, "https://github.com/aetrion/erl-dns.git", {ref, "24998cd"}}},
     {observer_cli, "1.0.7"}
@@ -150,6 +151,9 @@
 
         {template, "rel/files/app.config", "data/app.config"},
 
+        % Copy compatibility reference
+        {copy, "_build/default/lib/onedata_documentation/doc/compatibility_reference/compatibility.json", "./etc/"},
+
         % Onezone GUI static files
         {copy, "_build/default/lib/gui_static.tar.gz", "./data/"},
 
@@ -160,17 +164,13 @@
         {mkdir, "etc/gui_static/ozw/empty"},
         {copy, "rel/files/empty_service_page.html", "etc/gui_static/ozw/empty/index.html"},
 
-        {mkdir, "etc/gui_static/ozp"},
-        {mkdir, "etc/gui_static/ozp/empty"},
-        {copy, "rel/files/empty_service_page.html", "etc/gui_static/ozp/empty/index.html"},
-
         {mkdir, "etc/gui_static/opw"},
         {mkdir, "etc/gui_static/opw/empty"},
         {copy, "rel/files/empty_service_page.html", "etc/gui_static/opw/empty/index.html"},
 
-        {mkdir, "etc/gui_static/opp"},
-        {mkdir, "etc/gui_static/opp/empty"},
-        {copy, "rel/files/empty_service_page.html", "etc/gui_static/opp/empty/index.html"},
+        {mkdir, "etc/gui_static/onp"},
+        {mkdir, "etc/gui_static/onp/empty"},
+        {copy, "rel/files/empty_service_page.html", "etc/gui_static/onp/empty/index.html"},
 
         {mkdir, "etc/gui_static/hrv"},
         {mkdir, "etc/gui_static/hrv/empty"},
