VFS-5397 Account harvester GUI labels in tests, add possibility to turn off GUI verification for harvesters only

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -224,12 +224,18 @@
         {gui_static_root, "{{platform_etc_dir}}/gui_static"},
 
         %% By default, GUI packages uploaded by services operating under Onezone
-        %% are checked against known SHA-256 check-sums based on the compatibility
-        %% registry (see compatibility_registry_path env).
+        %% or harvester admins are checked against known SHA-256 check-sums,
+        %% using the compatibility registry (see compatibility_registry_path env).
+        %% Unverified packages are declined, unless the verification is disabled.
         %% WARNING: disabling GUI package verification poses a severe security
         %% threat, allowing Oneprovider owners to upload arbitrary GUI to
         %% Onezone (which is then hosted in Onezone's domain).
         {disable_gui_package_verification, false},
+
+        %% Disables GUI package verification for harvesters only. Should be used
+        %% with caution, when harvester admins can be trusted.
+        %% NOTE: not needed if disable_gui_package_verification is true.
+        {disable_harvester_gui_package_verification, false},
 
         %% Directory for custom static files for GUI (e.g. auth icons),
         %% files that are put there will be served under /ozw/onezone/custom/<path>
