--- a/rebar.config
+++ b/rebar.config
@@ -25,11 +25,11 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "./test/eunit_results"}]}}]}.
 
 {deps, [
-    {onedata_documentation, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/onedata-documentation.git", {ref, "baaaefb2e3"}}}},
-    {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "51c1054f32"}}},
-    {cluster_worker, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref,"09306786ab"}}},
-    {cluster_manager, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-manager.git", {ref, "786dec6c97"}}}},
-    {gui, {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {ref, "da93a50312"}}},
+    {onedata_documentation, {raw, {git, "ssh://git@git.onedata.org:7999/vfs/onedata-documentation.git", {ref, "baaaefb2e3"}}}},
+    {ctool, {git, "ssh://git@git.onedata.org:7999/vfs/ctool.git", {ref, "0cf5da90e65"}}},
+    {cluster_worker, {git, "ssh://git@git.onedata.org:7999/vfs/cluster-worker.git", {ref,"b9e6eefdfdb"}}},
+    {cluster_manager, {raw, {git, "ssh://git@git.onedata.org:7999/vfs/cluster-manager.git", {ref, "14536998c86"}}}},
+    {gui, {git, "ssh://git@git.onedata.org:7999/vfs/gui.git", {ref, "16586d0caef"}}},
     {esaml, {git, "https://github.com/onedata/esaml.git", {ref, "2cd59b3620"}}},
     {erldns, {git, "https://github.com/aetrion/erl-dns.git", {ref, "24998cd"}}},
     {observer_cli, "1.0.7"}
