VFS-5398 Improve some specs and descriptions

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -101,9 +101,11 @@
         {subdomain_delegation_supported, true},
 
         %% Indicates policy enforced during provider registration:
-        %%  open - anyone can register with no restrictions (default)
-        %%  restricted - requires a provider registration token,
-        %%               which can be issued only by a Onezone admin
+        %%  open - anyone can acquire a registration token and register a new
+        %%         Oneprovider
+        %%  restricted - requires an administrative privilege 'oz_providers_invite`
+        %%               to generate a provider registration token. The token
+        %%               can be issued for someone else.
         {provider_registration_policy, open},
 
         %% If disabled, registration token is optional when registering a provider.
