VFS-5508 Add browserDebugLogs field to GUI context

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -245,6 +245,9 @@
         {gui_custom_static_root, "/var/www/html/oz_worker/custom"},
         {legacy_gui_custom_static_root, "/var/www/html/custom/oz_worker"},
 
+        %% Enable debug logs in browser console
+        {gui_debug_mode, false},
+
         %% Timeout after which to invalidate
         %% basic auth cache record for given user
         {basic_auth_cache_expiration_timeout, 5000},
