--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -231,9 +231,7 @@
         %% WARNING: disabling GUI package verification poses a severe security
         %% threat, allowing Oneprovider owners to upload arbitrary GUI to
         %% Onezone (which is then hosted in Onezone's domain).
-        {disable_gui_package_verification, true},
-        % @TODO VFS-5498 Enable verification when test environments are aware
-        % of this setting.
+        {disable_gui_package_verification, false},
 
         %% Disables GUI package verification for harvesters only. Should be used
         %% with caution, when harvester admins can be trusted.
