VFS-5524 Add MaxMind's GeoLite2 database for geolocation queries

--- a/rebar.config
+++ b/rebar.config
@@ -26,9 +26,9 @@
 
 {deps, [
     {onedata_documentation, {raw, {git, "ssh://git@git.onedata.org:7999/vfs/onedata-documentation.git", {ref, "4eccbe3922"}}}},
-    {ctool, {git, "ssh://git@git.onedata.org:7999/vfs/ctool.git", {ref, "73bed3fc4a"}}},
-    {cluster_worker, {git, "ssh://git@git.onedata.org:7999/vfs/cluster-worker.git", {ref,"822d146965"}}},
-    {cluster_manager, {raw, {git, "ssh://git@git.onedata.org:7999/vfs/cluster-manager.git", {ref, "14536998c86"}}}},
+    {ctool, {git, "ssh://git@git.onedata.org:7999/vfs/ctool.git", {ref, "88fb954551"}}},
+    {cluster_worker, {git, "ssh://git@git.onedata.org:7999/vfs/cluster-worker.git", {ref,"8e5f538b6f"}}},
+    {cluster_manager, {raw, {git, "ssh://git@git.onedata.org:7999/vfs/cluster-manager.git", {ref, "ab09184c56"}}}},
     {gui, {git, "ssh://git@git.onedata.org:7999/vfs/gui.git", {ref, "16586d0caef"}}},
     {esaml, {git, "https://github.com/onedata/esaml.git", {ref, "2cd59b3620"}}},
     {erldns, {git, "https://github.com/aetrion/erl-dns.git", {ref, "24998cd"}}},
@@ -116,6 +116,7 @@
             iso8601, % without this one erldns will not start
             poolboy,
             erldns,
+            locus,
             oz_worker
         ]},
 
@@ -138,16 +139,20 @@
         {template, "rel/files/vm.args", "etc/vm.args"},
         {copy, "rel/files/auth.config", "etc/auth.config"},
         {copy, "rel/files/template.auth.config", "etc/template.auth.config"},
+
+        %% Copy plugins and Geolocation DB (MaxMind) files
         {copy, "rel/files/plugins", "etc/"},
+        {copy, "rel/files/geo-db", "etc/"},
 
         %% Copy cert dirs
         {copy, "rel/files/certs", "etc/"},
         {copy, "rel/files/cacerts", "etc/"},
 
         %% Copy additional data files
-        {copy, "rel/data/", "./"},
+        {mkdir, "data"},
         {copy, "LICENSE.txt", "./data/"},
         {copy, "README.md", "./data/"},
+        {copy, "rel/files/empty_zones.erldns.json", "./data/"},
 
         {template, "rel/files/app.config", "data/app.config"},
 
