--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -69,7 +69,17 @@
     {ctool, [
         % Path to the JSON file holding information about services
         % compatibility and verified gui hashes.
-        {compatibility_registry_path, "{{platform_etc_dir}}/compatibility.json"}
+        {compatibility_registry_path, "{{platform_etc_dir}}/compatibility.json"},
+
+        % Path to compressed MaxMind's GeoLite2 databases used for mapping
+        % IP addresses to ASN and country.
+        {geo_db_path, #{
+            asn =>     "{{platform_etc_dir}}/geo-db/geo-db-asn.tar.gz",
+            country => "{{platform_etc_dir}}/geo-db/geo-db-country.tar.gz"
+        }},
+        % File that holds info about last successful and attempted updates
+        % of the MaxMind DBs.
+        {geo_db_status_path, "{{platform_etc_dir}}/geo-db/geo-db-status.json"}
     ]},
 
     %% cluster_worker config
