VFS-5524 Update ctool, adjust code to new tokens API, remove support for deprecated macaroons, refactor code, please dialyzer

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -211,18 +211,16 @@
         % If an IdP does not inform about access token lifespan through the
         % "expires_in" parameter, this value is assumed (in seconds).
         {assumed_idp_access_token_lifespan, 3600},
+        % TTL of tokens issued for GUI apps (the app refreshes them automatically)
+        {gui_token_ttl, 86400}, % in seconds
 
+        %% @todo VFS-5554 Deprecated
         %% Macaroons authorization
         {authorization_macaroon_expiration_seconds, 31536000}, % 1 year
 %%        {authentication_macaroon_expiration_seconds, 900}, % 15 minutes
         % @todo for now make the authentication macaroons live longer,
         % until automatic refreshing by provider is implemented: VFS-1766
         {authentication_macaroon_expiration_seconds, 36000}, % 10 hours
-        %% Macaroons with longer TTL will not be accepted to impose higher
-        %% security level.
-        {max_provider_macaroon_ttl, 3600}, % in seconds
-        % TTL of tokens issued for GUI apps (the app refreshes them automatically)
-        {gui_token_ttl, 86400}, % in seconds
 
         %% ===================================================================
         %% GUI config
