--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -70,6 +70,10 @@
         % Path to the JSON file holding information about services
         % compatibility and verified gui hashes.
         {compatibility_registry_path, "{{platform_etc_dir}}/compatibility.json"},
+        {compatibility_registry_mirrors, [
+            "https://onedata.org/docs/doc/compatibility_reference/compatibility.json",
+            "https://raw.githubusercontent.com/onedata/onedata-documentation/master/doc/compatibility_reference/compatibility.json"
+        ]},
 
         % Path to compressed MaxMind's GeoLite2 databases used for mapping
         % IP addresses to ASN and country.
