--- a/rebar.config
+++ b/rebar.config
@@ -26,7 +26,7 @@
 
 {deps, [
     {onedata_documentation, {raw, {git, "ssh://git@git.onedata.org:7999/vfs/onedata-documentation.git", {ref, "fac93c4478"}}}},
-    {ctool, {git, "ssh://git@git.onedata.org:7999/vfs/ctool.git", {ref, "3ab1c2c626c0ab3"}}},
+    {ctool, {git, "ssh://git@git.onedata.org:7999/vfs/ctool.git", {ref, "6672bc0119"}}},
     {cluster_worker, {git, "ssh://git@git.onedata.org:7999/vfs/cluster-worker.git", {ref,"9619cb5a2a"}}},
     {cluster_manager, {raw, {git, "ssh://git@git.onedata.org:7999/vfs/cluster-manager.git", {ref, "8fc0f3ba129"}}}},
     {gui, {git, "ssh://git@git.onedata.org:7999/vfs/gui.git", {ref, "16586d0caef"}}},
@@ -156,8 +156,20 @@
 
         {template, "rel/files/app.config", "data/app.config"},
 
-        % Copy compatibility reference
-        {copy, "_build/default/lib/onedata_documentation/doc/compatibility_reference/compatibility.json", "./etc/"},
+        % Copy the compatibility reference:
+        %   1) Default compatibility reference for this software version
+        {copy,
+            "_build/default/lib/onedata_documentation/doc/compatibility_reference/compatibility.json",
+            "./data/compatibility.default.json"
+        },
+        %   2) Placeholder for the dynamic compatibility file that can be
+        %      overwritten by a newer registry when such is available. Will not
+        %      overwrite the older one in case of upgrade, as the etc dir is
+        %      persisted.
+        {copy,
+            "_build/default/lib/onedata_documentation/doc/compatibility_reference/compatibility.json",
+            "./etc/compatibility.json"
+        },
 
         % Onezone GUI static files
         {copy, "_build/default/lib/gui_static.tar.gz", "./data/"},
