VFS-5768 Updated docker images to 1909

--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -44,16 +44,15 @@
     "OTHER DEALINGS IN THE SOFTWARE."}.
 {rpm_requires,
     "Requires: %scl_require_package %{scl} folly\n"
-    "Requires: %scl_require_package %{scl} openssl\n"
+    "Requires: openssl\n"
     "Requires: libcouchbase2-libevent\n"}.
 {rpm_build_requires,
-	"BuildRequires: %scl_require_package devtoolset-6 gcc-c++\n"
+	"BuildRequires: %scl_require_package devtoolset-7 gcc-c++\n"
     "BuildRequires: %scl_require_package %{scl} boost-devel >= 1.58.0\n"
     "BuildRequires: %scl_require_package %{scl} folly-devel\n"
     "BuildRequires: %scl_require_package %{scl} folly-static\n"
     "BuildRequires: %scl_require_package %{scl} gflags-devel\n"
     "BuildRequires: %scl_require_package %{scl} glog-devel\n"
-    "BuildRequires: %scl_require_package %{scl} openssl\n"
     "BuildRequires: automake\n"
     "BuildRequires: bc\n"
     "BuildRequires: binutils-devel\n"
@@ -78,6 +77,7 @@
     "BuildRequires: libtool\n"
     "BuildRequires: make\n"
     "BuildRequires: ninja-build\n"
+    "BuildRequires: openssl\n"
     "BuildRequires: python\n"
     "BuildRequires: wget\n"}.
 {rpm_build,
