--- a/rebar.config
+++ b/rebar.config
@@ -26,12 +26,12 @@
 
 {deps, [
     {onedata_documentation, {raw, {git, "ssh://git@git.onedata.org:7999/vfs/onedata-documentation.git", {ref, "fac93c4478"}}}},
-    {ctool, {git, "ssh://git@git.onedata.org:7999/vfs/ctool.git", {ref, "6672bc0119"}}},
-    {cluster_worker, {git, "ssh://git@git.onedata.org:7999/vfs/cluster-worker.git", {ref,"496a749d45"}}},
-    {cluster_manager, {raw, {git, "ssh://git@git.onedata.org:7999/vfs/cluster-manager.git", {ref, "00dc730278"}}}},
+    {ctool, {git, "ssh://git@git.onedata.org:7999/vfs/ctool.git", {ref, "703a5aeead"}}},
+    {cluster_worker, {git, "ssh://git@git.onedata.org:7999/vfs/cluster-worker.git", {ref,"c7dcd72bcf"}}},
+    {cluster_manager, {raw, {git, "ssh://git@git.onedata.org:7999/vfs/cluster-manager.git", {ref, "d039ac8500"}}}},
     {gui, {git, "ssh://git@git.onedata.org:7999/vfs/gui.git", {ref, "16586d0caef"}}},
     {esaml, {git, "https://github.com/onedata/esaml.git", {ref, "2cd59b3620"}}},
-    {erldns, {git, "https://github.com/aetrion/erl-dns.git", {ref, "24998cd"}}},
+    {erldns, {git, "https://github.com/wgslr/erl-dns.git", {ref, "3b55aac"}}},
     {observer_cli, "1.0.7"}
 ]}.
 
