VFS-5730 Code polishing according to PR, improvements of token_api_test_SUITE

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -216,7 +216,7 @@
         {assumed_idp_access_token_lifespan, 3600},
         % TTL of tokens (seconds) issued for GUI apps (the app refreshes them automatically)
         {gui_token_ttl, 86400},
-        % Maximum allowed TTL for temporary tokens (security measurement as
+        % Maximum allowed TTL for temporary tokens (security measure as
         % temporary tokens are non revocable individually - it is only possible
         % to invalidate all at once).
         {max_temporary_token_ttl, 604800}, % 1 week
@@ -243,7 +243,7 @@
         %% Toggle GUI package verification for harvesters only. Should be used
         %% with caution, when harvester admins can be trusted.
         %% NOTE: ignored if gui_package_verification is false.
-        {disable_harvester_gui_package_verification, true},
+        {harvester_gui_package_verification, true},
 
         %% Directory for custom static files for GUI (e.g. auth icons),
         %% files that are put there will be served under /ozw/onezone/custom/<path>
