VFS-5940 Rename GUI package verification envs to more intuitive

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -241,12 +241,12 @@
         %% WARNING: disabling GUI package verification poses a severe security
         %% threat, allowing Oneprovider owners to upload arbitrary GUI to
         %% Onezone (which is then hosted in Onezone's domain).
-        {disable_gui_package_verification, false},
+        {gui_package_verification, true},
 
         %% Disables GUI package verification for harvesters only. Should be used
         %% with caution, when harvester admins can be trusted.
-        %% NOTE: not needed if disable_gui_package_verification is true.
-        {disable_harvester_gui_package_verification, false},
+        %% NOTE: not needed if gui_package_verification is false.
+        {harvester_gui_package_verification, true},
 
         %% Directory for custom static files for GUI (e.g. auth icons),
         %% files that are put there will be served under /ozw/onezone/custom/<path>
